--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/schedule": "^4.0.1",
+    "@nestjs/swagger": "^7.3.1",
     "axios": "^1.6.8",
     "cache-manager": "^5.5.1",
     "cache-module": "^0.0.6",
@@ -43,6 +44,7 @@
     "redis": "^4.6.13",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
+    "swagger-ui-express": "^5.0.0",
     "uuid": "^9.0.1",
     "zod": "^3.22.4"
   },
