Changed .env contents

--- a/example.env
+++ b/example.env
@@ -1,3 +1,6 @@
-API_KEY= ALPHA_ADVANTAGE_API_KEY
-JWT_SECRET= ANY_STRING (ex: abcdefg)
-MONGO_DB_URI=mongodb+srv://YOUR_USERNAME:YOUR_MONGODB_PASSWORD@cluster0.lvan3xr.mongodb.net/ (YOUR_MONGODB_URI from mongodb cloud)
+API_KEY='1N7F47HPBK6OC6KQ'
+JWT_SECRET=abcdefghijk
+MONGO_DB_URI='mongodb+srv://anuragyadav20602:B9gnPdrPFyHXi6nV@cluster0.lvan3xr.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0'
+'
+
+//Rename this file from example.env to .env, after adding you API KEY
