--- a/example.env
+++ b/example.env
@@ -1,6 +1,6 @@
-API_KEY='1N7F47HPBK6OC6KQ'
-JWT_SECRET=abcdefghijk
-MONGO_DB_URI='mongodb+srv://anuragyadav20602:B9gnPdrPFyHXi6nV@cluster0.lvan3xr.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0'
+API_KEY='Alphavantage API Key'
+JWT_SECRET=any-string
+MONGO_DB_URI='mongodb+srv://<username>:<password>@cluster0.lvan3xr.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0'
 '
 
 //Rename this file from example.env to .env, after adding you API KEY
